# fitness-ai-coach

./: README.md
fitness-ai-coach-backend/: .env.example  .gitignore  README.md  pyproject.toml
fitness-ai-coach-backend/app/: database.py  main.py
fitness-ai-coach-backend/app/config/: config.py
fitness-ai-coach-backend/app/controllers/: user_controller.py
fitness-ai-coach-backend/app/models/: feedback.py  plan.py  user.py
fitness-ai-coach-backend/app/routers/: ai_generate_Diet_workoutplan.py  feedback_router.py  user_router.py
fitness-ai-coach-backend/app/schemas/: feedback_schema.py  user_schema.py
fitness-ai-coach-backend/app/services/: ai_integration.py
fitness-ai-coach-frontend/: ..txt  .eslintignore  README.md  eslint.config.mjs  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
fitness-ai-coach-frontend/app/: layout.tsx  page.tsx
fitness-ai-coach-frontend/app/components/: landing_page.tsx
fitness-ai-coach-frontend/app/components/Footer/: footer.tsx
fitness-ai-coach-frontend/app/components/Header/: header.tsx
fitness-ai-coach-frontend/app/components/auth/: LoginForm.tsx  SignupForm.tsx
fitness-ai-coach-frontend/app/context/: AuthContext.tsx
fitness-ai-coach-frontend/app/dashboard/: page.tsx
fitness-ai-coach-frontend/app/login/: page.tsx
fitness-ai-coach-frontend/app/plan/: page.tsx
fitness-ai-coach-frontend/app/register/: page.tsx
fitness-ai-coach-frontend/app/test/: page.tsx
fitness-ai-coach-frontend/utils/: axios.ts
